# limitstates

./: .gitignore  .readthedocs.yaml  MANIFEST.in  README.md  notes.md  pyproject.toml  requirements.txt
design/: read.py
doc/readthedocs/: Readme.txt  requirements.txt
example/: Ex1 - Elements - clt.py  Ex1 - Elements - glulam.py  Ex1 - Elements.py  Ex1 - demo.py  Ex1 - units demo.py  ExZZ - Relationship.py  test_units.py
example/1. Basic Objects/: Ex1.1 - hello world.py  Ex1.2 - unit basics.py  Ex1.3 - plotting.py  Ex1.3 - section plotting.py  Ex1.3a - clt example plots.py  Ex1.4 - section libraries.py
example/2. Design/: 2.1.0 - Special Object Propreties.py  Ex1 - Elements - clt.py
example/3. Advanced Concepts/: Ex 3.1 - Beamcolumn Parametric Study.py  Ex 3.1a - Steel PM Interaction - Parametric Study.py  Ex 3.1b - Steel PM Interaction - Diagrams.py  Ex 3.2 - Steel Column Torsion.py  parametricHelpers.py
example/3. Advanced Principles/: Ex 3.1 - Beamcolumn Parametric Study.py
objects/: __init__.py  fireportection.py  geometry.py  parse.py  read.py  relationship.py  support.py
objects/element/: element.py
objects/loads/: combination.py
objects/material/: __init__.py  mat.py  read.py
objects/section/: __init__.py  clt.py  concrete.py  parse.py  section.py
src/limitstates/: __init__.py  requirements.txt
test/: test_obj_geometry.py  test_units.py
test/design/: test_read.py
test/objects/: TMP plot tests.py  test_convert_planesections.py  test_element_1D.py  test_element_plot.py  test_mat.py  test_obj_geometry.py  (+12 more)
units/: converter.py
(+204 files in other folders)
