[build-system]
requires = ["setuptools>=69", "setuptools-scm>=8.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "limitstates"
version = "0.2.1"
authors = [{name = "Christian Slotboom", email = "christian.slotboom@gmail.com"}]
requires-python = ">=3.10"
description = "A structural design library."
readme = "README.md"
keywords = ["structures", "design", "buildings"] 
dependencies = [
  "numpy",
  "matplotlib",
  "pandas",
  "planesections",
  "hysteresis",
]
classifiers = [
	'Development Status :: 4 - Beta',
    'Intended Audience :: Science/Research',
    'Intended Audience :: Developers',
    'Programming Language :: Python',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.12',
    'Programming Language :: Python :: 3 :: Only',
    'Topic :: Software Development',
    'Topic :: Scientific/Engineering',
    'Operating System :: Microsoft :: Windows',
    'Operating System :: POSIX',
    'Operating System :: Unix',
    'Operating System :: MacOS',
]

[options]
package-dir = {"" = "src"}

[project.urls]
Homepage = "https://github.com/cslotboom/limitstates"

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.exclude-package-data]
limitstates = ["*.xlsx"]